--- a/app/app.json
+++ b/app/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Levain",
-    "slug": "levain",
-    "scheme": "levain",
+    "name": "SOURDOUGH",
+    "slug": "Sourdough",
+    "scheme": "Sourdough",
     "sdkVersion": "51.0.0"
   }
 }
